--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,12 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  display: grid;
+  justify-items: left;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  font-size: 180%;
+  font-style: bold;
+  
 }
+
