--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,8 +79,14 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+    
+    
   
+  }
+  .h1{
+    justify-content: center;
   }
   
 }
+
 
